--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
   <footer>
     <ul class="nav justify-content-center pb-3 mb-3">
       <li class="nav-item"><a href="#home" class="nav-link px-2 text-dark fw-bold">Home</a></li>
-      <li class="nav-item"><a href="#whatido" class="nav-link px-2 text-dark fw-bold">What i do?</a></li>
-      <li class="nav-item"><a href="#portfolio" class="nav-link px-2 text-dark fw-bold">Portfolio</a></li>
-      <li class="nav-item"><a href="#about" class="nav-link px-2 text-dark fw-bold">About</a></li>
+      <li class="nav-item"><a href="#about" class="nav-link px-2 text-dark fw-bold">About?</a></li>
+      <li class="nav-item"><a href="#features" class="nav-link px-2 text-dark fw-bold">Features</a></li>
+      <li class="nav-item"><a href="#skills" class="nav-link px-2 text-dark fw-bold">Skills</a></li>
       <li class="nav-item"><a href="#contact" class="nav-link px-2 text-dark fw-bold">Contact</a></li>
       </ul>
   </footer>
